--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ kramdown:
 #  - jemoji
 
 ## personalize your slide show
-title:       Peter's slides
+title:       "Peter's slides"
 author:      Peter Schrammel
 description: Some Stuff
 
@@ -85,7 +85,7 @@ reveal:
   ## Transition style for full page slide backgrounds (default/none/slide/concave/convex/zoom)
   backgroundTransition: slide
   ## Number of slides away from the current that are visible
-  #viewDistance: 3
+  ## viewDistance: 2
   ## Parallax background image (e.g. "'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg'")
   #parallaxBackgroundImage: ''
   ## Parallax background size (CSS syntax, e.g. "2100px 900px")
@@ -94,7 +94,7 @@ reveal:
   ## when the presentation is scaled to fit different resolutions. Can be
   ## specified using percentage units.
   width: 1000
-  height: 920
+  height: 960
   ## Factor of the display size that should remain empty around the content
   margin: 0.1
   ## Bounds for smallest/largest possible scale to apply to content
